--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "Pygments==2.15.0",
     "colorama>=0.2.5",
     "sansio-lsp-client>=0.10.0,<0.11.0",
-    "python-language-server[rope,pyflakes]>=0.36.2,<1.0.0",
+    # TODO: langservers are disabled for now
+    #"python-language-server[rope,pyflakes]>=0.36.2,<1.0.0",
     "black>=25.12.0",
     "isort>=7.0.0",
     "dacite>=1.5.1,<2.0.0",
