--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -83,9 +83,11 @@ jobs:
     - run: brew install python@${{ matrix.python-version }}
     - run: brew install python-tk@${{ matrix.python-version }}
     - run: /opt/homebrew/bin/python${{ matrix.python-version }} --version
-    - run: /opt/homebrew/bin/python${{ matrix.python-version }} -m pip install -r requirements-dev.txt
-    - run: /opt/homebrew/bin/python${{ matrix.python-version }} scripts/download-tkdnd.py
-    - run: /opt/homebrew/bin/python${{ matrix.python-version }} -m pytest --durations=10
+    - run: /opt/homebrew/bin/python${{ matrix.python-version }} -m venv env
+    - run: source env/bin/activate && python --version
+    - run: source env/bin/activate && pip install -r requirements-dev.txt
+    - run: source env/bin/activate && scripts/download-tkdnd.py
+    - run: source env/bin/activate && python -m pytest --durations=10
 
   flake8-tkinter:
     timeout-minutes: 5
