--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,7 +2,7 @@
 Pygments==2.15.0
 colorama>=0.2.5
 sansio-lsp-client>=0.10.0,<0.11.0
-black>=25.12.0
+black==26.1.0
 isort>=7.0.0
 dacite>=1.5.1,<2.0.0
 tomli==2.0.1
