--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     "send2trash>=1.8.0,<2.0.0",
     "psutil>=5.8.0,<6.0.0",
     "PyYAML>=6.0,<7",
-    "tree-sitter-language-pack>=0.13.0,<0.14.0",
+    "tree-sitter-language-pack==0.13.0",
     "requests>=2.24.0, <3.0.0",
     "sv-ttk==2.6.1",
 ]
